# WikiGen

./: .prettierrc  CLAUDE.md  README.md  components.json  package.json  pnpm-lock.yaml  prettier.config.js  svelte.config.js  tailwind.config.ts
.github/workflows/: main.yml
src/: app.css  app.html  app.pcss  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/generator_assets/: initial.db  pokemon_moves.json  requirements.txt
src-tauri/resources/generator_assets/starting_data/: abilities.json  calculated_defenses.json  items.json  machines.json  matchup_map.json  moves.json  natures.json  routes.json  types.json
src-tauri/resources/generator_assets/starting_data/modifications/: modified_items_natures_abilities.json
src-tauri/resources/generator_assets/starting_data/pokemon_data/: shard_1.json  shard_10.json  shard_2.json  shard_3.json  shard_4.json  shard_5.json  shard_6.json  shard_7.json  shard_8.json  shard_9.json
src-tauri/resources/generator_assets/stylesheets/: extra.css
src-tauri/resources/generator_assets/templates/: pokemon_page_template.md  route_page_template.md  trainer_pokemon_template.md
src-tauri/resources/generator_assets/templates/item_templates/: item_entry_template.md  items_modifications_template.md
src-tauri/resources/migrations/: add-category-col-to-items-table.json  add-item-categories.json  add-pokemon-column-evolves-from.json  alter-movesets-column-learn_method.json  alter-movesets-split-learn_method.json  alter-pokemon-abilities-non-null.json  alter-pokemon-column-evolved-pokemon.json  create-categories-table.json  create-item-categories_1.9.0_2.sql  create-migrations-table_1.8.2.sql  migration-test-2-add-table.json  migration-test-2-delete-table.json  migration-test-add-table.json  migration.json  update-items-balls.json  update-items-battle.json  update-items-berries.json  update-items-general.json  update-items-held.json  update-items-key.json  update-items-machine.json  update-items-medicine.json  update-items-misc.json  update-mega-groundon.json  update-pokemon-abilities-columns.json
src-tauri/src/: create_wiki.rs  logger.rs  main.rs  pokemon_page_generator.rs  prepare_data.rs  tests.rs  utils.rs  yaml_declaration.rs
src-tauri/src/database/: mod.rs
src-tauri/src/helpers/: copy_recursively.rs  json_conversion.rs  matchups.rs  mkdocs_process.rs  mod.rs
src-tauri/src/migrations/: db_migrations.rs  file_migrations.rs  mod.rs  pokemon_migrations.rs
src-tauri/src/page_generators/: ability_page.rs  evolution_page.rs  game_routes.rs  item_page.rs  item_page_v1.rs  mod.rs  nature_page.rs  pokemon_page_generator_functions.rs  pokemon_pages.rs  type_page.rs
src-tauri/src/structs/: matchup_models.rs  mkdocs_structs.rs  mod.rs  move_structs.rs  pokemon_structs.rs
src-tauri/src/tests/: ability_generation_tests.rs  item_generation_tests.rs  migration_tests.rs  mod.rs  nature_generation_tests.rs  pokemon_generation_tests.rs  route_generation_tests.rs
src-tauri/src/wiki_preparation/: backup_wiki.rs  commit_wiki_changes.rs  create_wiki.rs  deploy_wiki.rs  game_routes.rs  mod.rs  prepare_data.rs  yaml_declaration.rs
src/lib/: Greet.svelte  NavButton.svelte  NumberInput.svelte  PokemonDetailsTab.svelte  PokemonPanel.svelte  SelectInput.svelte  TextInput.svelte  WikiSelectMenu.svelte  hold_utils.ts  index.ts  utils.ts
src/lib/components/: AttributeAbilities.svelte  AttributeItems.svelte  AttributeNatures.svelte  AutoComplete.svelte  BaseModal.svelte  Button.svelte  ItemLocationTable.svelte  LandingPage.svelte  ModifyMoveset.svelte  ModifyMovesets.svelte  NavButton.svelte  NewPokemonPanel.svelte  NumberInput.svelte  Pagination.svelte  PokemonDetailsTab.svelte  PokemonGeneration.svelte  PokemonLocationTab.svelte  PokemonLocations.svelte  PokemonMovesTab.svelte  PokemonPanel.svelte  RowCount.svelte  (+7 more)
src/routes/: +layout.svelte  +layout.ts  +page.js  +page.svelte
src/store/: abilities.ts  db.ts  gameRoutes.ts  index.ts  items.ts  mkdocs.ts  moves.ts  natures.ts  pokemon.ts  types.ts
(+46 files in other folders)
